<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.smi.android.quizapp.MainActivity">

    <LinearLayout

        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:text="@string/name"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapWords"
                android:textSize="16sp" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="20dp"
            android:text="@string/welcome"
            android:textColor="#0288D1"
            android:textSize="30sp"
            android:textStyle="bold" />
        <!-- Layout for ques 1 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/qnumber"
                android:text="@string/ques1" />

            <TextView
                style="@style/question"
                android:text="@string/q1" />
        </LinearLayout>

        <RadioGroup
            android:id="@+id/q1_group"
            style="@style/RadioGroup">

            <RadioButton
                style="@style/RadioButton"
                android:text="@string/q1_1" />

            <RadioButton
                android:id="@+id/q1_ans"
                style="@style/RadioButton"
                android:text="@string/q1_2" />

            <RadioButton
                style="@style/RadioButton"
                android:text="@string/q1_3" />

            <RadioButton
                style="@style/RadioButton"
                android:text="@string/q1_4" />
        </RadioGroup>

        <!-- Layout for ques 2 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <TextView
                style="@style/qnumber"
                android:text="@string/ques2" />

            <TextView
                style="@style/question"
                android:text="@string/q2" />
        </LinearLayout>

        <RadioGroup
            android:id="@+id/q2_group"
            style="@style/RadioGroup">

            <RadioButton
                android:id="@+id/q2_1"
                style="@style/RadioButton"
                android:text="@string/q2_1" />

            <RadioButton
                android:id="@+id/q2_2"
                style="@style/RadioButton"
                android:text="@string/q2_2" />

            <RadioButton
                android:id="@+id/q2_3"
                style="@style/RadioButton"
                android:text="@string/q2_3" />

            <RadioButton
                android:id="@+id/q2_ans"
                style="@style/RadioButton"
                android:text="@string/q2_4" />
        </RadioGroup>


        <!-- Layout for ques 3-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <TextView
                style="@style/qnumber"
                android:text="@string/ques3" />

            <TextView
                style="@style/question"
                android:text="@string/q3" />
        </LinearLayout>

        <EditText
            android:id="@+id/q3_ans"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapWords"
            android:textSize="16sp" />

        <!-- Layout for ques 4 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <TextView
                style="@style/qnumber"
                android:text="@string/ques4" />

            <TextView
                style="@style/question"
                android:text="@string/q4" />
        </LinearLayout>

        <RadioGroup
            android:id="@+id/q4_group"
            style="@style/RadioGroup">

            <RadioButton
                android:id="@+id/q4_1"
                style="@style/RadioButton"
                android:text="@string/q4_1" />

            <RadioButton
                android:id="@+id/q4_ans"
                style="@style/RadioButton"
                android:text="@string/q4_2" />

            <RadioButton
                android:id="@+id/q4_3"
                style="@style/RadioButton"
                android:text="@string/q4_3" />

            <RadioButton
                android:id="@+id/q4_4"
                style="@style/RadioButton"
                android:text="@string/q4_4" />
        </RadioGroup>


        <!-- Layout for ques 5-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <TextView
                style="@style/qnumber"
                android:text="@string/ques5" />

            <TextView
                style="@style/question"
                android:text="@string/q5" />
        </LinearLayout>


        <CheckBox
            android:id="@+id/q5_ans1"
            style="@style/checkbox"
            android:layout_marginTop="20dp"
            android:text="@string/q5_1" />

        <CheckBox
            android:id="@+id/q5_ans2"
            style="@style/checkbox"
            android:text="@string/q5_2" />

        <CheckBox
            android:id="@+id/q5_3"
            style="@style/checkbox"
            android:text="@string/q5_3" />

        <CheckBox
            android:id="@+id/q5_4"
            style="@style/checkbox"
            android:layout_marginBottom="20dp"
            android:text="@string/q5_4" />


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="20dp"
            android:onClick="submit"
            android:text="@string/done"
            android:textAllCaps="true" />


    </LinearLayout>
</ScrollView>